--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
 <body>
     <canvas id="canvas1"></canvas>
     <img id="player" src="assets/img/player.png">
+    <img id="layer1" src="assets/img/layer-1.png">
+    <img id="layer2" src="assets/img/layer-2.png">
+    <img id="layer3" src="assets/img/layer-3.png">
+    <img id="layer4" src="assets/img/layer-4.png">
+    <img id="layer5" src="assets/img/layer-5.png">
+
     <script type="module" src="main.js"></script>
 </body>
 </html>
