--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
     <img id="layer3" src="assets/img/layer-3.png">
     <img id="layer4" src="assets/img/layer-4.png">
     <img id="layer5" src="assets/img/layer-5.png">
+    <img id="enemy_fly" src="assets/img/enemy_fly.png">
+    <img id="enemy_plant" src="assets/img/enemy_plant.png">
+    <img id="enemy_spider_big" src="assets/img/enemy_spider_big.png">
 
     <script type="module" src="main.js"></script>
 </body>
