implement collision detection, particle effects, basic ui

--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
     <img id="enemy_fly" src="assets/img/enemy_fly.png">
     <img id="enemy_plant" src="assets/img/enemy_plant.png">
     <img id="enemy_spider_big" src="assets/img/enemy_spider_big.png">
-
+    <img id="fire" src="assets/img/fire.png">
+    
     <script type="module" src="main.js"></script>
 </body>
 </html>
