implement collision animations, floating messages, splash effect, gameover messages and fix stuffs

--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JSGDCBp9CodeCamp.org</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Creepster&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -19,7 +22,10 @@
     <img id="enemy_plant" src="assets/img/enemy_plant.png">
     <img id="enemy_spider_big" src="assets/img/enemy_spider_big.png">
     <img id="fire" src="assets/img/fire.png">
-    
+    <img id="collision_animation" src="assets/img/boom.png">
+    <img id="lives" src="assets/img/lives.png">
+
+
     <script type="module" src="main.js"></script>
 </body>
 </html>
